<resources>
    <string name="app_name">WhatsappClone</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_text_3">Calls</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search">Search</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">WhatsApp web</string>
    <string name="starred_messages">Starred messages</string>
    <string name="view_contact">View contact</string>
    <string name="media">Media</string>
    <string name="mute_notification">Mute notification</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="phone">phone</string>
    <string name="video">Video</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="two_step_verification">Two-step verification</string>
    <string name="change_number">Change number</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_whatsappclone_contacts">This is not your username or pin. This name will be visible to your WhatsAppClone contacts.</string>
    <string name="roufy_j">Roufy . J</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="custom_notifications">Custom Notifications</string>
    <string name="encryption">Encryption</string>
    <string name="messages_to_this_chat_and_calls_are_secured_with_end_to_end_encryption">Messages to this chat and calls are secured with end-to-end encryption</string>
    <string name="block">Block</string>
    <string name="report_spam">Report spam</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_country_code_and_phone_number">Enter your country code and phone number:</string>
    <string name="account">Account</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="data_and_storage_usage">Data and storage usage</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="help">Help</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="welcome_to_whatsappclone">Welcome to WhatsappClone</string>
</resources>
